--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pixi.js": "~5.3.3"
   },
   "devDependencies": {
-    "babel-preset-es2015": "~6.24.1",
+    "@babel/preset-env": "^7.12.1",
     "http-server": "~0.12.3",
     "jest": "~26.6.3",
     "parcel-bundler": "~1.12.4",
