--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
+    "eslint": "^7.15.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "http-server": "~0.12.3",
     "jest": "~26.6.3",
     "parcel-bundler": "~1.12.4",
