--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run clean && parcel src/index.html",
     "build": "npm run clean && parcel build src/index.html --public-url ./",
     "build_serve": "npm run build && http-server ./dist",
-    "clean": "rimraf ./dist ./.cache"
+    "clean": "npx rimraf ./dist ./.cache"
   },
   "author": "Scott Maunder",
   "license": "MIT",
