--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "http-server": "~0.12.3",
     "jest": "~26.6.3",
     "parcel-bundler": "~1.12.4",
-    "rimraf": "~2.6.2"
+    "rimraf": "~2.6.2",
+    "tslint": "^5.12.1",
+    "typescript": "^4.1.3"
   }
 }
