--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Scott Maunder",
   "license": "MIT",
   "dependencies": {
-    "pixi.js": "~5.3.3"
+    "pixi.js": "~5.3.3",
+    "zod": "^2.0.0-beta.30"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
