--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,17 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "pwa-chrome",
+      "name": "Debug Main Process",
+      "type": "node",
       "request": "launch",
-      "name": "Launch Vivaldi against localhost",
-      "url": "http://localhost:1234",
-      "webRoot": "${workspaceFolder}",
-      "runtimeExecutable": "C:\\Users\\maund\\AppData\\Local\\Vivaldi\\Application\\vivaldi.exe"
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
+      "windows": {
+        "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
+      },
+      "args": ["."],
+      "outputCapture": "std"
     }
   ]
 }
