--- a/package.json
+++ b/package.json
@@ -2,31 +2,60 @@
   "name": "gol",
   "version": "1.0.0",
   "description": "",
-  "scripts": {
-    "test": "jest",
-    "start": "npm run clean && parcel src/index.html",
-    "build": "npm run clean && parcel build src/index.html --public-url ./",
-    "build_serve": "npm run build && http-server ./dist",
-    "clean": "npx rimraf ./dist ./.cache"
+  "main": "./target/main.js",
+  "author": {
+    "name": "Scott Maunder"
   },
-  "author": "Scott Maunder",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kysumi/gol.git"
+  },
+  "keywords": [
+    "pixijs",
+    "electron",
+    "typescript",
+    "webpack",
+    "hot",
+    "webpack-dev-server",
+    "boilerplate"
+  ],
+  "build": {
+    "appId": "com.example.mygame",
+    "files": [
+      "./target/**/*"
+    ]
+  },
+  "scripts": {
+    "clean": "rimraf ./dist && rimraf ./target",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "main-dev": "cross-env NODE_ENV=development webpack --config ./config/webpack.main.config.js -w",
+    "main-dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.main.config.js --optimize-minimize",
+    "renderer-dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.renderer.config.js --optimize-minimize",
+    "renderer-dev": "cross-env NODE_ENV=development webpack serve --config ./config/webpack.renderer.config.js --inline",
+    "electron-dev": "cross-env NODE_ENV=development electron .",
+    "electron-prod": "cross-env NODE_ENV=production electron .",
+    "prepackage": "npm run clean && npm run main-dist && npm run renderer-dist",
+    "package": "build",
+    "start": "concurrently --kill-others \"npm run main-dev\" \"npm run renderer-dev\""
+  },
   "license": "MIT",
   "dependencies": {
-    "pixi.js": "~5.3.3",
-    "zod": "^2.0.0-beta.30"
+    "pixi.js": "5.3.7",
+    "zod": "1.11.11"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.12.1",
-    "eslint": "^7.15.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "http-server": "~0.12.3",
-    "jest": "~26.6.3",
-    "parcel-bundler": "~1.12.4",
-    "rimraf": "~2.6.2",
-    "tslint": "^5.12.1",
-    "typescript": "^4.1.3"
+    "concurrently": "3.5.1",
+    "cross-env": "5.1.3",
+    "electron": "1.8.8",
+    "electron-builder": "22.9.1",
+    "html-webpack-plugin": "5.0.0-beta.5",
+    "rimraf": "2.6.2",
+    "source-map-loader": "0.2.3",
+    "ts-loader": "8.0.3",
+    "tsconfig-paths-webpack-plugin": "3.3.0",
+    "typescript": "^4.1.3",
+    "webpack": "^5.0.0-rc.3",
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
