--- a/app/src/ts/gol/config/biome/biomes.json
+++ b/app/src/ts/gol/config/biome/biomes.json
@@ -10,24 +10,10 @@
     },
     "types": [
       {
-        "typeId": 1,
-        "neighboursRequired": {
-          "min": null,
-          "max": null
-        },
-        "waterRequirements": {
-          "distance": 4
-        }
+        "typeId": 1
       },
       {
         "typeId": 2,
-        "neighboursRequired": {
-          "min": null,
-          "max": null
-        },
-        "waterRequirements": {
-          "distance": 4
-        },
         "potentialSpawn": [
           {
             "typeId": 1
@@ -41,24 +27,10 @@
         ]
       },
       {
-        "typeId": 3,
-        "neighboursRequired": {
-          "min": null,
-          "max": null
-        },
-        "waterRequirements": {
-          "distance": 4
-        }
+        "typeId": 3
       },
       {
-        "typeId": 4,
-        "neighboursRequired": {
-          "min": null,
-          "max": null
-        },
-        "waterRequirements": {
-          "distance": null
-        }
+        "typeId": 4
       }
     ]
   }
