--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cross-env": "5.1.3",
     "electron": "1.8.8",
     "electron-builder": "22.9.1",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
     "html-webpack-plugin": "5.0.0-beta.5",
     "rimraf": "2.6.2",
     "source-map-loader": "0.2.3",
