--- a/app/assets/biome/biomes.json
+++ b/app/assets/biome/biomes.json
@@ -3,7 +3,7 @@
     "id": "grassy",
     "name": "Default Grass Biome",
     "conditions": {
-      "humidity": 10,
+      "heat": 10,
       "temperature": 10,
       "waterLevel": 50,
       "fetility": 50
@@ -12,13 +12,13 @@
       {
         "typeId": "grass",
         "conditions": {
-          "humidity": 10,
+          "moisture": 10,
           "temperature": 10,
           "waterLevel": 12,
           "fetility": 50
         },
         "transferRate": {
-          "heat": 0.1,
+          "heat": 0.2,
           "water": 0.6,
           "moisture": 0.1
         },
@@ -31,13 +31,13 @@
       {
         "typeId": "dirt",
         "conditions": {
-          "humidity": 10,
+          "moisture": 10,
           "temperature": 10,
           "waterLevel": 30,
           "fetility": 50
         },
         "transferRate": {
-          "heat": 0.1,
+          "heat": 0.3,
           "water": 0.5,
           "moisture": 0.1
         },
@@ -50,7 +50,7 @@
       {
         "typeId": "rock",
         "conditions": {
-          "humidity": 10,
+          "moisture": 10,
           "temperature": 10,
           "waterLevel": 1,
           "fetility": 50
@@ -69,13 +69,13 @@
       {
         "typeId": "water",
         "conditions": {
-          "humidity": 10,
+          "moisture": 10,
           "temperature": 10,
           "waterLevel": 100,
           "fetility": 50
         },
         "transferRate": {
-          "heat": 0.1,
+          "heat": 0.5,
           "water": 1,
           "moisture": 0.1
         },
