--- a/package.json
+++ b/package.json
@@ -44,12 +44,18 @@
     "zod": "1.11.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
+    "@types/jest": "^26.0.20",
+    "babel-jest": "^26.6.3",
     "concurrently": "3.5.1",
     "cross-env": "5.1.3",
     "electron": "1.8.8",
     "electron-builder": "22.9.1",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "html-webpack-plugin": "5.0.0-beta.5",
+    "jest": "^26.6.3",
     "rimraf": "2.6.2",
     "source-map-loader": "0.2.3",
     "ts-loader": "8.0.3",
